storage: delete usage of StorageConfiguration and associated classes / package